--- a/frontend/app/views/info/help.scala.html
+++ b/frontend/app/views/info/help.scala.html
@@ -1,4 +1,4 @@
-@()
+@import configuration.Config
 
 @main("Help") {
 
@@ -21,7 +21,7 @@
 
     <section id="difference-between-tiers"> 
         <h2 class="section-body-headline">What is the difference between a Friend, a Partner and a Patron?</h2>
-        <p>You can read a full description of each of our three membership tiers <a href=”https://membership.theguardian.com/join class="u-underline">here</a>.</p>
+        <p>You can read a full description of each of our three membership tiers <a href="/join" class="u-underline">here</a>.</p>
     </section>
 
     <section id="why-sign-in-to-become-a-member"> 
@@ -51,7 +51,7 @@
 
     <section id="what-events-are-upcoming"> 
         <h2 class="section-body-headline">How will I know what Guardian Live events are coming up?</h2>
-        <p>Our <a href=”https://membership.theguardian.com/events class="u-underline">events listing page</a> is updated regularly and when you sign up to membership, you will receive a weekly email newsletter containing information about our latest events.</p>
+        <p>Our <a href="/events" class="u-underline">events listing page</a> is updated regularly and when you sign up to membership, you will receive a weekly email newsletter containing information about our latest events.</p>
     </section>
 
     <section id="I-do-not-want-weekly-email"> 
@@ -76,12 +76,12 @@
 
     <section id="change-membership-tier"> 
         <h2 class="section-body-headline">What happens if I want to change my membership tier?</h2>
-        <p>You can change your membership package online. Just go to your <a href=”https://profile.theguardian.com/membership/edit” class="u-underline">Profile</a> page on the membership site and follow the instructions.</p>
+        <p>You can change your membership package online. Just go to your <a href="@Config.idWebAppUrl/membership/edit" class="u-underline">Profile</a> page on the membership site and follow the instructions.</p>
     </section>
 
     <section id="cancel-membership"> 
         <h2 class="section-body-headline">What happens if I want to cancel my membership?</h2>
-        <p>You can cancel your membership after the first 12 months by following the instructions on this <a href=”https://membership.theguardian.com/tier/cancel class="u-underline">page</a>. Your membership will run until the end of your current payment term.</p>
+        <p>You can cancel your membership after the first 12 months by following the instructions on this <a href="/tier/cancel" class="u-underline">page</a>. Your membership will run until the end of your current payment term.</p>
     </section>
 
     <section id="have-a-question"> 
@@ -91,17 +91,17 @@
 
     <section id="feedback-about-membership"> 
         <h2 class="section-body-headline">I've got feedback about membership</h2>
-        <p>Please fill in the feedback form on the site <a href=”https://membership.theguardian.com/feedback” class="u-underline">here</a>.</p>
+        <p>Please fill in the feedback form on the site <a href="/feedback" class="u-underline">here</a>.</p>
     </section>
 
     <section id="personal-data-protection"> 
         <h2 class="section-body-headline">How do I know you are protecting my personal information?</h2>
-        <p>We will never use your information for any purpose without your permission. You can read more about our approach to data security in our privacy policy <a href=”http://www.theguardian.com/help/privacy-policy” class="u-underline">here</a>.</p>
+        <p>We will never use your information for any purpose without your permission. You can read more about our approach to data security in our privacy policy <a href="http://www.theguardian.com/help/privacy-policy" class="u-underline">here</a>.</p>
     </section>
 
     <section id="terms-conditions-of-membership"> 
         <h2 class="section-body-headline">What are the terms and conditions of membership?</h2>
-        <p>You can read our full set of terms and conditions <a href=”http://www.theguardian.com/help/terms-of-service” class="u-underline">here</a>.</p>
+        <p>You can read our full set of terms and conditions <a href="http://www.theguardian.com/help/terms-of-service" class="u-underline">here</a>.</p>
     </section>
 
     <section id="wheelchair-access-for-venue"> 
