--- a/frontend/app/views/fragments/benefits/priceInfo.scala.html
+++ b/frontend/app/views/fragments/benefits/priceInfo.scala.html
@@ -7,11 +7,11 @@
         </div>
     } { pricing =>
         <div class="price-info__container-inner">
-            <div class="price-info__detail">£@pricing.yearly/yr</div>
-            <div class="price-info__sub-detail">Save £@pricing.yearlySaving/yr</div>
+            <div class="price-info__detail">£@pricing.yearly/year</div>
+            <div class="price-info__sub-detail">Save £@pricing.yearlySaving/year</div>
         </div>
         <div class="price-info__container-inner price-info__container-inner--last">
-            <div class="price-info__detail">£@pricing.monthly/mo</div>
+            <div class="price-info__detail">£@pricing.monthly/month</div>
         </div>
     }
 </div>
