--- a/frontend/app/views/info/about.scala.html
+++ b/frontend/app/views/info/about.scala.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="benefits-container u-cf">
-        <h2 class="about-block-title">what's included</h2>
+        <h2 class="about-block-title">What's included</h2>
         <ul class="benefits__list u-unstyled u-cf">
             <li class="benefits__list--items">
                 <i class="icon-sprite icon-sprite__left icon-sprite-book_tickets"></i>
