add a new button for promo modes

--- a/frontend/app/views/fragments/tier/benefits.scala.html
+++ b/frontend/app/views/fragments/tier/benefits.scala.html
@@ -36,9 +36,14 @@
                 @fragments.tier.details(currentTier=tier, showBenefitDetails=showBenefitDetails)
             </div>
         </div>
-        <div class="package__item package__item-cta">
+        <div class="package__item package__item-cta@if(mode == "promo") { package__item--promo}">
             @if(mode == "promo") {
-                <a class="action action--secondary-button" href="/join/@tier.toString.toLowerCase">Learn more about @tier</a>
+                <a class="action action-cta" href="/join/@tier.toString.toLowerCase/enter-details">Become a @tier</a>
+                @if(tier == Tier.Patron) {
+                    <a class="action action--secondary-button" href="/patrons">Learn more about @tier</a>
+                } else {
+                    <a class="action action--secondary-button" href="/about">Learn more about @tier</a>
+                }
             }
             @if(!isCurrentPackage && mode != "promo") {
                 @if(currentTier.getOrElse("") == Tier.Friend || tier == Tier.Friend) {
