--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -54,7 +54,7 @@
         <div class="home-slice__inner u-cf">
             <div class="home-slice__copy-block">
                 <div class="home-slice__media">
-                    <img src="@Asset.at("images/homepage/new/alan_pulitzer_prize_speech.jpg")" alt="" />
+                    <img src="@Asset.at("images/homeslice/740-Alan-Desk.jpg")" alt="" />
                 </div>
                 <div class="home-slice__headline-block">
                     <h2 class="home-slice__headline">Membership fuels our journalism</h2>
@@ -73,7 +73,7 @@
     <div class="home-slice u-cf home-slice--green home-slice--slice-four">
         <div class="home-slice__inner u-cf">
             <div class="home-slice__headline-block">
-                <h2 class="home-slice__headline">A home for big ideas</h2>
+                <h2 class="home-slice__headline">A home for <br />big ideas</h2>
             </div>
             <div class="home-slice__copy-block">
                 <p class="home-slice__copy">
@@ -95,7 +95,7 @@
         <div class="home-slice__inner u-cf">
             <div class="home-slice__copy-block">
                 <div class="home-slice__media">
-                    <img src="@Asset.at("images/homepage/new/audience_discussion1.jpg")" alt="" />
+                    <img src="@Asset.at("images/homeslice/740-crowd.jpg")" alt="" />
                 </div>
                 <div class="home-slice__headline-block">
                     <h2 class="home-slice__headline">Founding members: join us at the start</h2>
