--- a/frontend/assets/stylesheets/layout/_layout.scss
+++ b/frontend/assets/stylesheets/layout/_layout.scss
@@ -3,10 +3,13 @@ html {
     min-height: 100%;
     background-color: #ffffff;
     background: url(/assets/images/mem-bg-events.jpg) repeat-y center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+
+    @include mq(tablet) {
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+    }
 
     &.events-bg,
     &.about-membership {
@@ -22,7 +25,7 @@ html {
     }
 
     &.home-page {
-        background-image: url(/assets/images/homepage/new/top_crowd.jpg);
+        background-image: url(/assets/images/top_crowd.jpg);
     }
 
     &.about-membership {
