--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -102,7 +102,7 @@
                 </div>
                 <div class="home-slice__offset-copy">
                     <p class="home-slice__copy">
-                        Guardian membership is launching in beta. We have ambitious plans, and new features will be added regularly. Guardian membership will grow into a vibrant, self-organising community of free-thinkers.
+                        Guardian Membership is launching in beta. We have ambitious plans, and new features will be added regularly. Guardian membership will grow into a vibrant, self-organising community of free-thinkers.
                     </p>
                     <p class="home-slice__copy">
                         Help to build and shape this community by joining as a Founding Partner or Patron,
