Add benifit icons

--- a/frontend/app/views/fragments/tier/upgradeAside.scala.html
+++ b/frontend/app/views/fragments/tier/upgradeAside.scala.html
@@ -9,7 +9,7 @@
         <li class="form-detail__item">
             <h2 class="form__heading">What's included</h2>
             <ul>
-                @for((header, body) <- Benefits.details(tier).list) {
+                @for((header, body, icon) <- Benefits.details(tier).list) {
                     <li>@header</li>
                     <li>@body</li>
                 }
