--- a/frontend/assets/stylesheets/pages/_about.scss
+++ b/frontend/assets/stylesheets/pages/_about.scss
@@ -33,6 +33,29 @@ h2.about-block-title {
     .home-slice--join-today {
         background-color: $white;
     }
+
+    .benefits-title {
+        @include fs-bodyHeading(1);
+        border-top: 1px solid $c-neutral5;
+        @include rem((
+            padding: $gs-gutter/2 0 0 0
+        ));
+    }
+
+    .package__description {
+        @include rem((
+            min-height: 120px
+        ));
+    }
+
+    .package__list-benefits-element {
+        margin: 0;
+        padding: 0;
+        &:before {
+            content: '';
+            display: none;
+        }
+    }
 }
 
 .benefits-container {
