--- a/frontend/app/views/fragments/tier/details.scala.html
+++ b/frontend/app/views/fragments/tier/details.scala.html
@@ -1,4 +1,8 @@
-@(currentTier: com.gu.membership.salesforce.Tier.Tier, showBenefitDetails: Boolean = true)
+@(
+    currentTier: com.gu.membership.salesforce.Tier.Tier, 
+    showBenefitDetails: Boolean = true,
+    showBenefitCopy: Boolean = true
+)
 @import model.Benefits
 @import com.gu.membership.salesforce.Tier
 
@@ -11,9 +15,11 @@
         @for(t <- Tier.values.toSeq.sorted){
             @if(t >= Tier.Friend & t <= currentTier){
                 <ul class="package__list-benefits-element">
-                    @for((header, body) <- Benefits.details(t).list) {
-                        <li class="benefits-title">@header</li>
-                        <li class="benefits-copy">@body</li>
+                    @for((header, body, icon) <- Benefits.details(t).list) {
+                        <li class="benefits-title"><i class="icon-sprite icon-sprite-@icon icon-sprite--small"></i>@header</li>
+                        @if(showBenefitCopy) {
+                            <li class="benefits-copy">@body</li>
+                        }
                     }
                 </ul>
             }
