--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -33,7 +33,7 @@
         <div class="tickets-select-form__detail hidden-mobile">
             <p class="tickets-select-form__leadin">@Benefits.details(tier).leadin</p>
             <ul class="u-unstyled">
-                @for((header, body) <- Benefits.details(tier).list) {
+                @for((header, body, icon) <- Benefits.details(tier).list) {
                 <li class="benefits-title">@header</li>
                 <li class="benefits-copy">@body</li>
                 }
