--- a/frontend/app/views/login/signin.scala.html
+++ b/frontend/app/views/login/signin.scala.html
@@ -26,7 +26,7 @@
             <p>@Benefits.details(tier).leadin</p>
 
             <ul class="package__list-benefits-element">
-            @for((header, body) <- Benefits.details(tier).list) {
+            @for((header, body, icon) <- Benefits.details(tier).list) {
                 <li class="benefits-title">@header</li>
                 <li class="benefits-copy">@body</li>
             }
