--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -31,7 +31,7 @@
 
     @* ===== Bring the Guardian to life ===== *@
 
-    <div class="home-slice u-cf home-slice--red home-slice--slice-two">
+    <div class="home-slice u-cf home-slice--red home-slice--home-two">
         <div class="home-slice__inner u-cf">
             <div class="home-slice__headline-block">
                 <h2 class="home-slice__headline">Events that bring the Guardian to life</h2>
@@ -70,7 +70,7 @@
 
     @* ===== Big ideas ===== *@
 
-    <div class="home-slice u-cf home-slice--green home-slice--slice-four">
+    <div class="home-slice u-cf home-slice--green home-slice--home-four">
         <div class="home-slice__inner u-cf">
             <div class="home-slice__headline-block">
                 <h2 class="home-slice__headline">A home for <br />big ideas</h2>
