--- a/frontend/app/views/joiner/tier/patron.scala.html
+++ b/frontend/app/views/joiner/tier/patron.scala.html
@@ -35,7 +35,7 @@
 
     @* ===== Ensuring our independence ===== *@
 
-    <div class="home-slice u-cf home-slice--red home-slice--slice-two">
+    <div class="home-slice u-cf home-slice--red home-slice--patron-two">
         <div class="home-slice__inner u-cf">
             <div class="home-slice__headline-block">
                 <h2 class="home-slice__headline">Ensuring our independence</h2>
@@ -56,7 +56,7 @@
             </div>
             <div class="home-slice__copy-block">
                 <div class="home-slice__media">
-                    <img src="@Asset.at("images/homepage/new/audience_discussion1.jpg")" alt="" />
+                    <img src="@Asset.at("images/homeslice/patrons/740-backstage.jpg")" alt="" />
                 </div>
                 <div class="home-slice__offset-copy">
                     <p class="home-slice__copy">In return for your support, Patrons are given a behind-the-scenes view of how the Guardian operates.  For example, tour our newsroom, visit our printing presses or attend a campaign lecture.</p>
@@ -68,7 +68,7 @@
 
     @* ===== Backstage pass to the Guardian ===== *@
 
-    <div class="home-slice u-cf home-slice--green home-slice--slice-four">
+    <div class="home-slice u-cf home-slice--green home-slice--patron-four">
         <div class="home-slice__inner u-cf">
             <div class="home-slice__headline-block">
                 <h2 class="home-slice__headline">Choose to get involved</h2>
