--- a/frontend/assets/stylesheets/layout/_footer.scss
+++ b/frontend/assets/stylesheets/layout/_footer.scss
@@ -21,8 +21,7 @@ footer {
 
 .l-footer {
     @include rem((
-        padding: 0 0 ($gs-baseline/3)*4,
-        margin-top: $gs-baseline*3
+        padding: 0 0 ($gs-baseline/3)*4
     ));
     background: $c-neutral8;
 
@@ -65,6 +64,18 @@ footer {
     @include mq(tablet) {
         @include rem((
             padding-top: ($gs-baseline/3)*2
+        ));
+    }
+
+    @include mq(desktop) {
+        @include rem((
+            width: gs-span(12)+$gs-gutter*2
+        ));
+    }
+
+    @include mq(mem-full) {
+        @include rem((
+            width: gs-span(14)+$gs-gutter*2
         ));
     }
 
