--- a/frontend/assets/stylesheets/layout/_homeslice.scss
+++ b/frontend/assets/stylesheets/layout/_homeslice.scss
@@ -1,7 +1,19 @@
+/*
+
+    .home-slice containers display site brochure content wether full width or cropped to breakpoint with
+    modifiers for content oriented blocks (.home-slice--content) or hero style blocks (.home-slice--epic).
+
+    Responsiveness is a little scrappy right now but works well - could do with a refactor.
+
+     - Chris Finch, 04/09/14
+
+*/
+
 .home-slice {
 
     position: relative;
 
+    // White backing for homeslice containers (layered with images)
     &:before {
         content: '';
         position: absolute;
@@ -13,6 +25,7 @@
         height: 100%;
     }
 
+    // Background images for homeslice containers (can be full with with modifier)
     &:after {
         content: '';
         position: absolute;
@@ -20,14 +33,12 @@
         z-index: -1;
         display: block;
         width: 100%;
-        //height: 192px;
 
         padding-bottom: -webkit-calc((100% / 5) * 3);
         padding-bottom: -moz-calc((100% / 5) * 3);
         padding-bottom: -o-calc((100% / 5) * 3);
         padding-bottom: calc((100% / 5) * 3);
 
-        //background-attachment: fixed;
         background-repeat: no-repeat;
         background-position-x: center;
         background-position-y: top;
@@ -42,9 +53,11 @@
             z-index: -1;
             display: block;
             width: 100%;
-            height: 560px;
             padding-bottom: 0;
-            //background-attachment: fixed;
+            @include rem((
+                height: 560px
+            ));
+
             background-repeat: no-repeat;
             background-position: center center;
             background-position-x: center;
@@ -55,39 +68,64 @@
 
         @include mq(desktop) {
             left: 50%;
-            margin-left: -#{(gs-span(12)+$gs-gutter*2)/2};
-            width: gs-span(12)+$gs-gutter*2;
+            @include rem((
+                margin-left: -#{(gs-span(12)+$gs-gutter*2)/2},
+                width: gs-span(12)+$gs-gutter*2
+            ));
         }
 
         @include mq(mem-full) {
-            margin-left: -#{(gs-span(14)+$gs-gutter*2)/2};
-            width: gs-span(14)+$gs-gutter*2;
+            @include rem((
+                margin-left: -#{(gs-span(14)+$gs-gutter*2)/2},
+                width: gs-span(14)+$gs-gutter*2
+            ));
         }
     }
 
-    &.home-slice--slice-two:after {
+    // Per-homeslice images ================================================ //
+
+    &.home-slice--home-two:after {
         background-image: url(/assets/images/homeslice/740-Russell-Brand.jpg);
         @include mq(tablet) {
             background-image: url(/assets/images/homeslice/1140-Russell-Brand.jpg);
         }
     }
 
-    &.home-slice--slice-four:after {
+    &.home-slice--home-four:after {
         background-image: url(/assets/images/homeslice/740-Midland-goods-shed.jpg);
         @include mq(tablet) {
             background-image: url(/assets/images/homeslice/1140-Midland-goods-shed.jpg);
         }
     }
 
+    &.home-slice--patron-two:after {
+        background-image: url(/assets/images/homeslice/patrons/740-Alan-profile.jpg);
+        @include mq(tablet) {
+            background-image: url(/assets/images/homeslice/patrons/1140-Alan-profile.jpg);
+        }
+    }
+
+    &.home-slice--patron-four:after {
+        background-image: url(/assets/images/homeslice/patrons/740-Get-involved.jpg);
+        @include mq(tablet) {
+            background-image: url(/assets/images/homeslice/patrons/1140-Get-involved.jpg);
+        }
+    }
+
+    // Inner container set to breakpoint width for content
     .home-slice__inner {
         position: relative;
         width: 100%;
-        padding-bottom: $gs-gutter;
+        @include rem((
+            padding-bottom: $gs-gutter
+        ));
 
         .home-slice__headline-block {
             width: 100%;
-            min-height: 104px;
-            padding: $gs-gutter $gs-gutter/2 $gs-gutter;
+            @include rem((
+                min-height: 104px,
+                padding: $gs-gutter $gs-gutter/2 $gs-gutter
+            ));
             background-color: transparentize($mem-blue, .1);
 
             margin-top: -webkit-calc(((100%/5)*3) - #{$gs-gutter/2});
@@ -97,17 +135,21 @@
 
             @include mq(tablet) {
                 float: left;
-                width: 320px;
-                min-height: 160px;
-                padding: $gs-gutter;
                 position: absolute;
                 margin-top: 0;
+                @include rem((
+                    width: 320px,
+                    min-height: 160px,
+                    padding: $gs-gutter
+                ));
             }
 
             @include mq(mem-full) {
-                width: 480px;
                 position: static;
-                padding: $gs-gutter $gs-gutter*8 $gs-gutter $gs-gutter;
+                @include rem((
+                    width: 480px,
+                    padding: $gs-gutter $gs-gutter*8 $gs-gutter $gs-gutter
+                ));
             }
         }
 
@@ -121,31 +163,40 @@
 
         .home-slice__copy-block {
             width: 100%;
-            background-color: $white;
-            padding: $gs-gutter/2;
+            @include rem((
+                background-color: $white,
+                padding: $gs-gutter/2
+            ));
 
             @include mq(tablet) {
-                margin-top: 400px; // 560-160
-                padding: $gs-gutter;
                 float: right;
-                width: 660px;
+                @include rem((
+                    margin-top: 400px, // 560-160
+                    padding: $gs-gutter,
+                    width: 660px
+                ));
             }
 
             .home-slice__copy {
                 @include fs-headline(10);
                 font-weight: 100;
-                margin-bottom: 17px;
+                @include rem((
+                    margin-bottom: 17px
+                ));
                 @include mq(tablet) {
                     @include fs-headline(9);
                 }
             }
 
             .action {
-                margin: 0 0 17px;
-
+                @include rem((
+                    margin: 0 0 17px
+                ));
             }
         }
     }
+
+    // Title block colour modifiers ======================================== //
 
     &.home-slice--red .home-slice__headline-block {
         background-color: transparentize($mem-live-accent, .1);
@@ -158,6 +209,8 @@
         background-color: transparentize($mem-green, .1);
     }
 
+    // Type modifiers ====================================================== //
+
     &.home-slice--content {
         background-color: $white;
         &:before,
@@ -168,9 +221,11 @@
         .home-slice__headline-block {
             width: 100%;
             background-color: transparentize($mem-blue, .1);
-            margin-top: -$gs-gutter/2;
             position: relative;
             z-index: 2;
+            @include rem((
+                margin-top: -$gs-gutter/2
+            ));
 
             @include mq(tablet) {
                 margin: 0;
@@ -179,12 +234,16 @@
                 z-index: 2;
                 right: 0;
                 top: 0;
-                width: 320px;
-                min-height: 160px;
+                @include rem((
+                    width: 320px,
+                    min-height: 160px
+                ));
             }
 
             @include mq(mem-full) {
-                width: 500px;
+                @include rem((
+                    width: 500px
+                ));
             }
         }
 
@@ -195,13 +254,17 @@
             padding: 0;
 
             @include mq(tablet) {
-                padding: 0 $gs-gutter $gs-gutter;
+                @include rem((
+                    padding: 0 $gs-gutter $gs-gutter
+                ));
             }
 
             @include mq(desktop) {
                 float: left;
-                width: 800px;
-                padding: 0 0 $gs-gutter $gs-gutter;
+                @include rem((
+                    width: 800px,
+                    padding: 0 0 $gs-gutter $gs-gutter
+                ));
             }
 
             .home-slice__media {
@@ -211,24 +274,32 @@
 
                 @include mq(tablet) {
                     position: static;
-                    max-width: 460px;
-                    max-height: 276px;
+                    @include rem((
+                        max-width: 460px,
+                        max-height: 276px
+                    ));
                 }
 
                 @include mq(desktop) {
                     float: left;
-                    max-width: 700px;
-                    max-height: 420px;
+                    @include rem((
+                        max-width: 700px,
+                        max-height: 420px
+                    ));
                 }
             }
             .home-slice__offset-copy {
                 display: block;
-                padding: $gs-gutter $gs-gutter/2 $gs-gutter/2;
                 width: 100%;
+                @include rem((
+                    padding: $gs-gutter $gs-gutter/2 $gs-gutter/2
+                ));
 
                 @include mq(desktop) {
                     float: right;
-                    width: 620px;
+                    @include rem((
+                        width: 620px
+                    ));
                 }
 
                 .home-slice__copy--quote {
@@ -243,7 +314,9 @@
                     @include fs-headline(1);
                     font-style: normal;
                     font-weight: lighter;
-                    margin-bottom: 17px;
+                    @include rem((
+                        margin-bottom: 17px
+                    ));
                     @include mq(tablet) {
                         @include fs-headline(2);
                     }
@@ -253,7 +326,9 @@
     }
 
     &.home-slice--epic {
-        padding-top: 164px; // 200 - 36 header margin
+        @include rem((
+            padding-top: 164px // 200 - 36 header margin
+        ));
 
         &:before {
             content: '';
@@ -277,12 +352,16 @@
         }
 
         .home-slice__headline-block {
-            padding-right: $gs-gutter*3;
+            @include rem((
+                padding-right: $gs-gutter*3
+            ));
         }
 
         .home-slice__copy-block {
             @include mq(tablet) {
-                margin-top: 396px; // 560-200-160
+                @include rem((
+                    margin-top: 396px // 560-200-160
+                ));
             }
         }
 
@@ -292,7 +371,14 @@
         background-color: $c-neutral6;
 
         .home-slice__headline {
-            padding: $gs-gutter $gs-gutter 80px;
+            @include rem((
+                padding: $gs-gutter
+            ));
+            @include mq(tablet) {
+                @include rem((
+                    padding-bottom: $gs-gutter*4
+                ));
+            }
         }
 
     }
@@ -309,11 +395,15 @@
 
     @include mq(desktop) {
         .home-slice__inner {
-            width: gs-span(12)+$gs-gutter*2;
+            @include rem((
+                width: gs-span(12)+$gs-gutter*2
+            ));
         }
 
         &.home-slice--content .home-slice__inner .home-slice__headline-block {
-            width: 340px;
+            @include rem((
+                width: 340px
+            ));
         }
 
 
@@ -321,15 +411,21 @@
 
     @include mq(mem-full) {
         .home-slice__inner {
-            width: gs-span(14)+$gs-gutter*2;
+            @include rem((
+                width: gs-span(14)+$gs-gutter*2
+            ));
         }
 
         &.home-slice--content .home-slice__inner .home-slice__headline-block {
-            width: 500px;
+            @include rem((
+                width: 500px
+            ));
         }
 
         &.home-slice--join-today .join-today__join-boxes {
-            padding-left: 180px;
+            @include rem((
+                padding-left: 180px
+            ));
         }
     }
 
@@ -340,9 +436,13 @@
    ================================================================= */
 
 .join-today__join-boxes {
-    padding: $gs-gutter/2;
+    @include rem((
+        padding: $gs-gutter/2
+    ));
     @include mq(tablet) {
-        padding: $gs-gutter;
+        @include rem((
+            padding: $gs-gutter
+        ));
     }
 
     @include mq($from: mobile, $to: desktop) {
