Fix link and text

--- a/frontend/app/views/tier/change.scala.html
+++ b/frontend/app/views/tier/change.scala.html
@@ -10,7 +10,7 @@
         <div class="content__container">
             <section class="content__section">
                 <h1 class="content__headline">Change your tier</h1>
-                <a href="@Config.idWebAppUrl/account/edit" class="action action--arrow-left action-cta--confirm">Back to my profile</a>
+                <a href="@Config.idWebAppUrl/membership/edit" class="action action--arrow-left action-cta--confirm">Edit profile</a>
             </section>
         </div>
         <div class="package-container">
