Don't change colour on hover

--- a/frontend/assets/stylesheets/components/_action.scss
+++ b/frontend/assets/stylesheets/components/_action.scss
@@ -214,7 +214,10 @@
 }
 
 .action-cta--cancel {
-    background-color: $mem-button-cancel;
+    &,
+    &:hover {
+      background-color: $mem-button-cancel;
+    }
 }
 
 .action-cta--disabled {
