Link around help section

--- a/frontend/app/views/info/feedback.scala.html
+++ b/frontend/app/views/info/feedback.scala.html
@@ -9,7 +9,7 @@
 
     <p>We read all feedback carefully, but please note we cannot respond to all comments submitted.</p>
 
-    <p>If you’re having any problems please visit our <a href="/help" class="u-underline">help</a> section.</p>
+    <p>If you’re having any problems please visit our <a href="/help" class="u-underline">help section</a>.</p>
 
     <form action="" method="POST" id="feedback-form" class="form form-primary-container js-feedback-form">
         @CSRF.formField
