add new image for patrons page

--- a/frontend/assets/stylesheets/layout/_layout.scss
+++ b/frontend/assets/stylesheets/layout/_layout.scss
@@ -32,6 +32,13 @@ html {
         background-image: url(/assets/images/mem-bg-events.jpg);
     }
 
+    &.patron-page {
+        background: url(/assets/images/backgrounds/740-Patrons-hero.jpg) no-repeat top center fixed;
+        @include mq(tablet) {
+            background: url(/assets/images/backgrounds/1920-Patrons-hero.jpg) no-repeat top center fixed;
+        }
+    }
+
 }
 
 body {
