Make copy block raised by default

--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -11,7 +11,7 @@
 
     @* ===== Homepage hero ===== *@
 
-    <div class="home-slice home-slice--epic u-cf">
+    <div class="home-slice home-slice--epic home-slice--epic-lower-copy-block u-cf">
         <div class="home-slice__inner u-cf">
             <div class="home-slice__headline-block">
                 <h1 class="home-slice__headline">We believe that the open exchange of information,
