--- a/frontend/app/views/fragments/form/addressDetail.scala.html
+++ b/frontend/app/views/fragments/form/addressDetail.scala.html
@@ -4,18 +4,32 @@ county: Option[String], userCountry: Option[String])
 
 @import model.Countries
 
-@subdivisionSelect(subdivisionsList: List[String], subdivisionType: String, subdivisionLabel: String, isStateOrProvence: Boolean = false) = {
-    <div class="form-field address-fieldset__country@if(isStateOrProvence == true){ u-h}">
-        <label class="label" for="@subdivisionLabel-@(formType)">@subdivisionLabel.capitalize</label>
+@countyOrStateSelect(countyOrStateList: List[String], countyOrStateLabel: String) = {
+    <div class="form-field address-fieldset__country u-h">
+        <label class="label" for="@countyOrStateLabel-@(formType)">@countyOrStateLabel.capitalize</label>
         <div class="input">
-            <select name="@(formType).@(subdivisionType)"
-                    id="@subdivisionLabel-@(formType)"
-                    @if(isStateOrProvence == true) {
-                    data-error-message="Please enter your @subdivisionLabel.capitalize"
-                    data-validation="required"
-                    }>
-            @for(subdivision <- subdivisionsList) {
-                <option value="@subdivision"@if(userCountry.getOrElse("") == subdivision){selected}>@subdivision</option>
+            <select name="@(formType).countyOrState"
+                    id="@countyOrStateLabel-@(formType)"
+                    data-error-message="Please enter your @countyOrStateLabel.capitalize"
+                    data-validation="required">
+            @for(county <- countyOrStateList) {
+                <option value="@county"@if(userCountry.getOrElse("") == county){selected}>@county</option>
+            }
+            </select>
+        </div>
+    </div>
+}
+
+@countrySelect(countryList: List[String]) = {
+    <div class="form-field address-fieldset__country">
+        <label class="label" for="country-@(formType)">Country</label>
+        <div class="input">
+            <select name="@(formType).country"
+                    id="country-@(formType)"
+                    data-error-message="Please enter your Country"
+                    data-validation="required">
+            @for(country <- countryList) {
+                <option value="@country"@if(userCountry.getOrElse("") == country){selected}>@country</option>
             }
             </select>
         </div>
@@ -32,6 +46,8 @@ county: Option[String], userCountry: Option[String])
         </div>
 
         <div class="fieldset__fields">
+
+            @countrySelect(Countries.all)
 
             <div class="form-field">
                 <label class="label" for="address-line-one-@(formType)">Address line 1</label>
@@ -64,8 +80,22 @@ county: Option[String], userCountry: Option[String])
                        @if(addressRequired == true){data-validation="required"} />
             </div>
 
+            @countyOrStateSelect(Countries.US.states.toList, "state")
+            @countyOrStateSelect(Countries.Canada.states.toList, "province")
+
+            <div class="js-county-container-@(formType)">
+                <div class="form-field js-county-section">
+                    <label class="label" for="county-or-state-@(formType)">County</label>
+                    <input type="text"
+                    name="@(formType).countyOrState"
+                    value="@county"
+                    id="county-or-state-@(formType)"
+                    class="text-input text-input--block js-county-state"/>
+                </div>
+            </div>
+
             <div class="form-field">
-                <label class="label" for="postCode-@(formType)">Post code</label>
+                <label class="label js-postcode-@(formType)" for="postCode-@(formType)">Post code</label>
                 <input type="text"
                        name="@(formType).postCode"
                        value="@postcode"
@@ -73,19 +103,6 @@ county: Option[String], userCountry: Option[String])
                        class="text-input text-input--block js-post-code"
                        data-error-message="Please enter your @heading.toLowerCase() post code"
                        data-validation="required"/>
-            </div>
-
-            @subdivisionSelect(Countries.all, "country", "country")
-            @subdivisionSelect(Countries.US.states.toList, "countyOrState", "state", true)
-            @subdivisionSelect(Countries.Canada.states.toList, "countyOrState", "province", true)
-
-            <div class="form-field js-county-section">
-                <label class="label" for="county-or-state-@(formType)">County</label>
-                <input type="text"
-                       name="@(formType).countyOrState"
-                       value="@county"
-                       id="county-or-state-@(formType)"
-                       class="text-input text-input--block js-county-state"/>
             </div>
         </div>
     </div>
