made fieldset invisible so this doesnt show up in the form

--- a/frontend/app/views/fragments/form/marketingChoices.scala.html
+++ b/frontend/app/views/fragments/form/marketingChoices.scala.html
@@ -1,6 +1,6 @@
 @(gnm: Option[Boolean], thirdParty: Option[Boolean])
 
-<fieldset class="fieldset">
+<fieldset class="u-h">
 
     <input type="hidden"
            name="marketingChoices.gnnMarketing"
