removed class and whitespace

--- a/frontend/app/views/fragments/form/nameDetail.scala.html
+++ b/frontend/app/views/fragments/form/nameDetail.scala.html
@@ -1,7 +1,6 @@
 @(firstName: Option[String], lastName: Option[String])
 
-<fieldset class="fieldset address-fieldset">
-
+<fieldset class="fieldset">
     <div class="fieldset__heading">
         <h2 class="form__heading">Name</h2>
         <div class="form__note">All fields with <span class="required-marker"></span>required.</div>
