--- a/frontend/app/views/fragments/form/paymentOptions.scala.html
+++ b/frontend/app/views/fragments/form/paymentOptions.scala.html
@@ -1,6 +1,6 @@
-@(targetTier: com.gu.membership.salesforce.Tier.Tier)
+@(tier: com.gu.membership.salesforce.Tier.Tier)
 
-@import views.support.Options._
+@import model.Benefits
 
 <fieldset class="fieldset">
     <div class="fieldset__heading">
@@ -8,18 +8,35 @@
         <div class="form__note">Price includes VAT</div>
     </div>
     <div class="fieldset__fields">
-        <div class="form-field">
-            <label class="label upgrade__payment-label" for=annual>
-                <input type="radio" name="payment.annual" id="annual" value="true" checked="checked"/>
-                <span class="payment-label__title">Pay annually</span>
-                <span class="payment-label__amount">@annualAmount(targetTier)</span>
-                <span class="payment-label__note">1 year membership, 3 months free</span>
+        <div class="form-field js-payment-options-container">
+
+            <label class="label upgrade__payment-label" for="annual">
+                @Benefits.details(tier).pricing.fold{
+                }{ pricing =>
+                    <input type="radio"
+                           name="payment.type"
+                           id="annual"
+                           value="annual"
+                           checked="checked"
+                           data-pricing-option-amount="@pricing.yearly"/>
+                    <span class="payment-label__title">Pay £@pricing.yearly/year</span>
+                    <span class="payment-label__amount">£@pricing.yearly one off annual payment (save £@pricing.yearlySaving a year)</span>
+                    <span class="payment-label__note">1 year membership, 3 months free</span>
+                }
             </label>
+
             <label class="label upgrade__payment-label" for="monthly">
-                <input type="radio" name="payment.annual" id="monthly" value="false"/>
-                <span class="payment-label__title">Pay monthly</span>
-                <span class="payment-label__amount">@monthAmount(targetTier)</span>
-                <span class="payment-label__note">Spread your payment across the year</span>
+                @Benefits.details(tier).pricing.fold{
+                }{ pricing =>
+                    <input type="radio"
+                           name="payment.type"
+                           id="monthly"
+                           value="month"
+                           data-pricing-option-amount="@pricing.monthly"/>
+                    <span class="payment-label__title">Pay £@pricing.monthly/month</span>
+                    <span class="payment-label__amount">£@pricing.monthly per month (£@pricing.yearlyMonthlyCost per year)</span>
+                    <span class="payment-label__note">1 year membership, pay in instalments over a year</span>
+                }
             </label>
         </div>
     </div>
